# Better-Life-Backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: pre-commit.yml  tests.yml
api/: authentication.py  serializers.py  urls.py  views.py
api/services/: nutrition_generator.py  training_generator.py
better_life_backend/: asgi.py  settings.py  urls.py  wsgi.py
better_life_backend/db/: admin.py  apps.py  models.py
better_life_backend/db/management/commands/: seed_all.py  seed_exercises.py  seed_recipes.py
better_life_backend/db/migrations/: 0001_initial.py  0002_change_audit_fks_to_useraccount.py  0003_userprofile_activity_level_and_more.py  0004_dailyroutine_exercise_routineexercise_trainingplan_and_more.py  0004_userprofile_disliked_foods_and_more.py  0005_nutrition_models_and_allergens.py
scripts/: deploy.sh
tests/: conftest.py  test_auth_endpoints.py  test_foo.py  test_nutrition_endpoints.py  test_nutrition_generator.py  test_nutrition_models.py  test_onboarding_endpoints.py  test_training_endpoints.py  test_training_models.py  test_user_endpoints.py  test_user_models.py
